--- a/Airport-scraper-full.Rmd
+++ b/Airport-scraper-full.Rmd
@@ -27,8 +27,9 @@ instructions:
 ```         
 docker run -d -p 4445:4444 -p 5900:5900 --env VNC_NO_PASSWORD=1 --name selenium_firefox selenium/standalone-firefox-debug
 ```
+# First Steps 
 
-# Set your user-agent
+## Set your user-agent
 
 (check your user agent
 [here](https://www.google.com/search?client=ubuntu&channel=fs&q=what%27s+my+user+agent&ie=utf-8&oe=utf-8))
@@ -76,6 +77,7 @@ We should now be connected to the remote Docker computer
 Libraries
 
 ```{r}
+# Selenium 
 library(RSelenium)
 library(tidyverse)
 library(rvest)
@@ -1069,7 +1071,7 @@ scrape_all_airports <- function(airport_codes) {
 
 ```
 
-# Selenium scaping
+# Selenium scraping
 
 Having loaded all our important functions, we can now run the
 main function with a list of Airports.
@@ -1118,7 +1120,7 @@ we can now scrape all AENA Airports and save them in a vector of
 links. In preparation to scraping the actual flights information
 of all Airports out of their HTMLs, we will also create a list
 with the Airport codes as names and the links as values. For this
-its important to remmener that `scrape_all_airports()` saves
+its important to remember that `scrape_all_airports()` saves
 HTMLs, and hence, if we were to make a list without transforming
 that information, we would simply get paths to the HTMLs. We need
 to `read_html()` each path and then save it into a list
@@ -1174,11 +1176,15 @@ extract the information.
 ### Flight information function
 
 First, we create a function that will clean the information and
-create a tibble with it. Important here is that for the current
+create a tibble with it. 
+
+Important here is that for the current
 and delayed departure time there were two options. First, you can
 use CSS to find the classes that contain "tachado" (original
 departure) and "hora" (delayed departure), with code like this:
 `html_nodes(xpath = "//span[not(contains( @class, 'tachado'))]")`.
+
+
 However, it would get complicated if there would be no delay and
 only one category. While we could use an `if` command to work
 with the different cases, it is easier to go with option two,
@@ -1426,7 +1432,7 @@ to save all of this information into CSV's. First, we will save
 the information into individual CSV, and afterwards we combine
 that information into one single CSV.
 
-## Individual Airports CSV function
+# Individual Airports CSV function
 
 Here, we are going to use our `scrape_flights()` function to
 create `save_flights_data()`. We no flights are found it wil warn
@@ -1488,6 +1494,8 @@ save_flights_data <- function(url, airport_name) {
 }
 ```
 
+## One Airport CSV
+
 For an individidual Airport you should be able to now run the
 code below by inserting in the empty bunny ears the city code you
 chose to scrape the HTML from:
@@ -1496,7 +1504,7 @@ chose to scrape the HTML from:
 save_flights_data(aena_flight_information, "")
 ```
 
-### LOOP for ALL INDIVIDUAL Airports
+## LOOP for all individual Airports CSVs
 
 Now we loop `save_flights_data()` for all individual Airports to
 scrape the flight data and save each tibble as a CSV file with
@@ -1508,7 +1516,7 @@ walk2(airport_urls, names(airport_urls), save_flights_data)
 
 ```
 
-## One dataset
+# One dataset
 
 With our individual datasets for each Airport, we can now set out
 to create one mega dataset for all Airports. First we create one
